Fixed z-index for Advanced menu and improved popups

--- a/www/docroot/css/color_Fritz.css
+++ b/www/docroot/css/color_Fritz.css
@@ -26,6 +26,11 @@
   font-size: 1.125rem;
 }
 
+
+.row[style="z-index : 3;  position: relative;"] {
+  position: unset !important;
+}
+
 .container {
   width: 100%;
 }
@@ -119,6 +124,7 @@ body {
 }
 
 .modal-body {
+  min-height: 15.1rem;
   overflow-y:auto;
   overflow-x:hidden;
   max-height: max-content;
@@ -288,13 +294,15 @@ div.logo-technicolor a {
 .modal-action:hover, .modal-action:hover i {
   color: #ddd;
 }
-
+body{
+  overflow: hidden;
+}
 .popUp {
   position: absolute;
-  max-width: calc(100% - 17.2rem);
-  height: auto;
-  max-height: calc(100% - 7.3rem);
-  overflow: hidden;
+  width: calc(100% - 17.2rem);
+  max-width: calc(100% - 17.25rem);
+  height: 22rem;
+  overflow: visible;
   margin: 0;
   left: 16.5rem;
   top: 2.5rem;
@@ -302,8 +310,33 @@ div.logo-technicolor a {
   border-radius: 0;
   margin-top: 3.8rem;
   padding-bottom: 0;
-  box-shadow: 0 0.1875rem 0.375rem rgba(0,0,0,0.25);
+  box-shadow: none;
 }
+.popUp:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  margin: 0;
+  left: 0;
+  top: calc(100% - 2px);
+  background-color: transparent;
+  box-shadow: 0 0.1875rem 0.375rem rgba(0,0,0,0.65);
+  pointer-events: none
+}
+
+.popUp:before {
+    content: '';
+    position: absolute;
+    z:index:-1;
+    margin-left:-0.5rem;
+    width: calc(100% + 1rem);
+    height: calc(9.7rem + 100%);
+    top: 100%;
+    left: 0px;
+    background-color: #f0eee6;
+}
+
 
 .popUp .header {
   box-shadow: none;
@@ -428,7 +461,6 @@ input::placeholder{
   margin-right: 0.5rem;
 }
 
-
 .nav-tabs>.active>a, .nav-tabs>.active>a:hover{
   border: 0;
   background-color: #006ec0;
@@ -448,4 +480,9 @@ input::placeholder{
 .dropdown-menu>li>a:hover{
   color: #000;
   background-image:none;
+}
+
+textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="date"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, input[type="number"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="color"]:focus, .uneditable-input:focus{
+  border: 1px solid #d5d5d5;
+  box-shadow: unset;
 }
